--- a/kooplexhub/hub/templates/index.html
+++ b/kooplexhub/hub/templates/index.html
@@ -1,189 +1,60 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends "layout.html" %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+{% load static %}
 
-    
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'fonts/open-iconic-master/font/css/open-iconic-bootstrap.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'fonts/remix-icon/remixicon.css' %}">
+{% block head_content %}
+<link rel="stylesheet" type="text/css" href="{% static 'fonts/open-iconic-master/font/css/open-iconic-bootstrap.css' %}">
+<style>
+.ico {
+width: 50px; 
+height: 30px; 
+padding-right: 10px; 
+margin-top: 10px
+}
+</style>
+{% endblock %}
 
-
-
-    <link rel="stylesheet" type="text/css" href="{% static 'fonts/icons-1.5.0/font/bootstrap-icons.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'fonts/fontawesome-free-5.10.2-web/css/all.css' %}">
-    {% block css_extra %}{% endblock %}
-    {#<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>#}
-    {#<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>#}
-
-
-
-    {# FIXME: ez milyen url? #}
-    {#<script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>#}
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-
-    {% block chardinhelp %}
-    <link type="text/css" href="{% static 'chardinjs/chardinjs.css' %}" rel="stylesheet">
-    <script src="{% static 'chardinjs/chardinjs.js' %}" type="text/javascript"></script>
-    <script>
-       (function() {
-         $(function() {
-           $('body').chardinJs({
-             'attribute': 'data-intro',
-             url: "{% static 'chardinjs/helptext_main.json' %}"
-           });
-       
-           // or trigger via an anchor tag
-           $('a[data-toggle="chardinjs"]').on('click', function (e) {
-             e.preventDefault();
-             return ($('body').data('chardinJs')).toggle();
-           });
-       
-             return $('body').on('chardinJs:stop', function () {
-
-           });
-
-         });
-       }).call(this);
-    </script>
-    {% endblock %}
-
-    <style>
-    @media all and (min-width: 1165px) {
-      .navbar .nav-item .dropdown-menu{ display: none; }
-      .navbar .nav-item:hover .dropdown-menu{ display: block; }
-      .navbar .nav-item .dropdown-menu{ margin-top: 0; }
-      .side{ display: flex; }
-      .separate{ margin-left: 30px}
-      .body-content{display: flex }
-      .body{ margin-left: 10px}
-    }
-
-    </style>
-
-  <body style="margin:0px 15px 0px 10px;" data-chardin-sequenced="true" data-chardin-auto="false" data-chardin-delay="800">
-
-
-{% block navbar %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'indexpage' %}"><img data-intro="#ch" src="/static/logo_mono.png" style="height: 30px" alt="Kooplex Hub"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      {% comment %}
-      FIXME: active=menu_* better active_menu=*
-      {% endcomment %}
-              {% if app_project_installed %}
-                {% include "menuitem_project.html" with active=menu_project %}
-              {% endif %}
-              {% if app_report_installed %}
-                {% include "menuitem_report.html" with active=menu_report %}
-              {% endif %}
-              {% if app_education_installed %}
-                {% include "menuitem_education.html" with active=menu_teaching %}
-              {% endif %}
-              {% include "menuitem_container.html" with active=menu_container %}
-              {% if app_plugin_installed %}
-                {% include "menuitem_plugin.html" with active=menu_service %}
-              {% endif %}
-            <li class="nav-item"><a class="nav-link" href="http://k8plex-test.vo.elte.hu:30666/" target="_blank">Documentation</a></li>
-      <li class="nav-item"> <a href="#" class="nav-link" data-toggle="chardinjs">Help</a></li>
-          </ul>
-         
-          {% include "navbarmenu_right.html" %}
-        </div>
-      </div>
-    </nav>
-      {% block submenu %}{% endblock %}
-    {% endblock %}
-
-
- {% block body %}
-      <div>
-        <div class="body-content">
-          <div>    
-         <div class="card shadow p-3 mb-2 mt-3 bg-light rounded"> 
-           <h6 class="card-title">Powered by</h6>
-           <div class="card-body" style="flex-direction: row; flex-wrap: wrap; justify-content: space-between">
-             <img src="/static/dockerlogo.png" style="width: 50px; height: 30px; padding-right: 10px; margin-top: 10px" alt="docker">
-             <img src="/static/kuberneteslogo.png" style="width: 50px; height: 30px; padding-right: 10px; margin-top: 10px" alt="k8s">
-             <img src="/static/django.png" style="width: 50px; height: 30px; padding-right: 10px; margin-top: 10px" alt="django">
-             <img src="/static/Nginx-Logo.png" style="width: 50px; height: 30px; padding-right: 10px; margin-top: 10px" alt="nginx">
-             <img src="/static/jupyter.png" style="width: 50px; height: 30px; padding-right: 10px ; margin-top: 10px" alt="jupyter">
-             <img src="/static/rstudio.png" style="width: 50px; height: 30px; padding-right: 10px; margin-top: 10px" alt="rstudio">
-             <img src="/static/gitea.png"  style="width: 50px; height: 30px; padding-right: 10px; margin-top: 10px" alt="gitea">
-             <img src="/static/seafile.png"  style="width: 50px; height: 30px; padding-right: 10px; margin-top: 10px" alt="seafile">
-             <img src="/static/slurm.png" style="width: 50px; height: 30px; padding-right: 10px; margin-top: 10px" alt="slurm">
-             <img src="/static/singularity.png" style="width: 50px; height: 30px; padding-right: 10px; margin-top: 10px" alt="singularity">
-           </div>
-         </div>
-
-         {% if notes %}
-<div class="card shadow p-3 mb-5 bg-light rounded"> 
-  <div class="card-body">
-    <h5 class="card-title">Note{% if notes|length > 1 %}s{% endif %}</h5>
-    <div class="alert alert-info show" role="alert">
-      {% for note in notes %}
-        <p>{{ note.message }}<br>{{ note.created_at }}</p>
-      {% endfor %}
+{% block bodycontent %}
+<div class="container">
+  <div class="card shadow p-3 mb-2 mt-3 bg-light rounded"> 
+    <h6 class="card-title">Powered by</h6>
+    <div class="card-body" style="flex-direction: row; flex-wrap: wrap; justify-content: space-between">
+      <img class="ico" src="/static/dockerlogo.png" alt="docker">
+      <img class="ico" src="/static/kuberneteslogo.png" alt="k8s">
+      <img class="ico" src="/static/django.png" alt="django">
+      <img class="ico" src="/static/Nginx-Logo.png" alt="nginx">
+      <img class="ico" src="/static/jupyter.png"  alt="jupyter">
+      <img class="ico" src="/static/rstudio.png" alt="rstudio">
+      <img class="ico" src="/static/gitea.png"  alt="gitea">
+      <img class="ico" src="/static/seafile.png" alt="seafile">
     </div>
   </div>
 </div>
-{% endif %}
-          </div>
-          <div class="body">
-        <div class="jumbotron shadow p-3 mb-5 mt-3 bg-light rounded">
-          <div class="row">
-            <div class="col-md-12">
-              <img src="/static/logo-transparent.png" style="transform: translate(0, 22px); width: 350px; margin-top: -25px" alt="kooplex">
-        {% comment %}
-              <!-- platform specific -->
-              <img src="/static/content/VEO-logo-trp.png" style="width: 200px;" alt="VEO test platform">
-              <!-- platform specific -->
-        {% endcomment %}
-            </div>
-          </div>
-        </div>
-        <div class="jumbotron shadow p-3 mb-5 bg-light rounded">
-          <div class="row">
-            <div class="col-md-7">
-              <div style="width: 100%;">
-                {% comment %} {% include "slideshow.html" %} {% endcomment %}
-                <img class="d-block w-100" src="/static/Kooplex-frontpage.png" alt="Access private cloud file system, share data and results">
-              </div>
-            </div>
-            <div class="col-md-5" style="text-align: right">
-              <div class="row" style="margin-top: 20px">
-                Dive into various fields of computational physics, modeling and numerical analysis of data with the help of Jupyter notebooks.
-              </div>
-            </div>
-          </div>
-        </div>
-          </div>
-        </div>
+
+<div class="container">
+{% if notes %}
+<div class="card shadow p-3 mb-5 bg-light rounded"> 
+   <div class="card-body">
+      <h5 class="card-title">Note{% if notes|length > 1 %}s{% endif %}</h5>
+      <div class="alert alert-info show" role="alert">
+{% for note in notes %}
+        <p>{{ note.message }}<br>{{ note.created_at }}</p>
+{% endfor %}
       </div>
-    {% endblock %}
+   </div>
+</div>
+{% endif %}
+</div>
+
+{% endblock %}
 
 
+ {% comment %}
 
-   <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" 
-      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+{% load static %}
 
+{% block chardinhelp %}
+             url: "{% static 'chardinjs/helptext_main.json' %}"
+{% endblock %}
 
-
-</body>
-</html>
+    {% endcomment %}
