--- a/kooplexhub/hub/templates/layout.html
+++ b/kooplexhub/hub/templates/layout.html
@@ -1,152 +1,82 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    
-    {% load static %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'fonts/icons-1.8.3/font/bootstrap-icons.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'fonts/open-iconic-master/font/css/open-iconic-bootstrap.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'fonts/remix-icon/remixicon.css' %}">
+    <link rel="shortcut icon" type="image/png" href="/static/kooplexicon.png"/>
+    <title>Kooplex Hub</title>
 
-
-
-    <link rel="stylesheet" type="text/css" href="{% static 'fonts/icons-1.5.0/font/bootstrap-icons.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'fonts/fontawesome-free-5.10.2-web/css/all.css' %}">
-    {% block css_extra %}{% endblock %}
-    {#<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>#}
-    {#<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>#}
-
-
-
-    {# FIXME: ez milyen url? #}
-    {#<script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>#}
-
+    <style>
+.navbar-expand-md .navbar-nav .nav-link {
+  padding-right: 1ex;
+}
+.container-fluid {
+  margin-left: initial;
+  margin-right: initial;
+  padding-left: initial;
+  padding-right: initial;
+}
+    </style>
+    {% block head_content %}{% endblock %}
+    <!-- JQuery motor -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-
-    {% block chardinhelp %}
-    <link type="text/css" href="{% static 'chardinjs/chardinjs.css' %}" rel="stylesheet">
-    <script src="{% static 'chardinjs/chardinjs.js' %}" type="text/javascript"></script>
-    <script>
-       (function() {
-         $(function() {
-           $('body').chardinJs({
-             'attribute': 'data-intro',
-             url: "{% static 'chardinjs/helptext_main.json' %}"
-           });
-       
-           // or trigger via an anchor tag
-           $('a[data-toggle="chardinjs"]').on('click', function (e) {
-             e.preventDefault();
-             return ($('body').data('chardinJs')).toggle();
-           });
-       
-             return $('body').on('chardinJs:stop', function () {
-
-           });
-
-         });
-       }).call(this);
-    </script>
-    {% endblock %}
-
-    <style>
-    @media all and (min-width: 1265px) {
-      .navbar .nav-item .dropdown-menu{ display: none; }
-      .navbar .nav-item:hover .dropdown-menu{ display: block; }
-      .navbar .nav-item .dropdown-menu{ margin-top: 0; }
-    }    
-
-    @media all and (min-width: 1265px) {
-      .container {
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-}
-
-.navigation-menu {
-  grid-column: span 3;
-  margin-left: -45px;
-}
-
-.main-content {
-  grid-column: span 7;
-  margin-left: 60px;
-}
-
-    }
-
-    </style>
-
-
-    <title>Kooplex Hub</title>
-    {% block scripts %}{% endblock %}
   </head>
-  <body style="margin:0px 15px 0px 10px;" data-chardin-sequenced="true" data-chardin-auto="false" data-chardin-delay="800">
-    {% block navbar %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'indexpage' %}"><img src="/static/logo_mono.png" style="height: 30px" alt="Kooplex Hub"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      {% comment %}
-      FIXME: active=menu_* better active_menu=*
-      {% endcomment %}
-              {% if app_project_installed %}
-                {% include "menuitem_project.html" with active=menu_project %}
-              {% endif %}
-              {% if app_report_installed %}
-                {% include "menuitem_report.html" with active=menu_report %}
-              {% endif %}
-              {% if app_education_installed %}
-                {% include "menuitem_education.html" with active=menu_teaching %}
-              {% endif %}
-              {% include "menuitem_container.html" with active=menu_container %}
-              {% if app_plugin_installed %}
-                {% include "menuitem_plugin.html" with active=menu_service %}
-              {% endif %}
-            <li class="nav-item"><a class="nav-link" href="http://k8plex-test.vo.elte.hu:30666/" target="_blank">Documentation</a></li>
-      <li class="nav-item"> <a href="#" class="nav-link" data-toggle="chardinjs">Help</a></li>
-          </ul>
-         
-          {% include "navbarmenu_right.html" %}
+  <body>
+    <noscript>You need to enable JavaScript to browse kooplex.</noscript>
+    {% block menu_and_content %}
+    <div class="container-fluid d-flex flex-row flex-md-row">
+      {% include 'mainmenu.html' %} 
+      <main class="ps-0 ps-md-0 flex-grow-1">
+      {% block content %}
+        {% block header %}
+        <div class="container-fluid">
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex">
+            <div class="container-fluid d-flex flex-column flex-md-row">
+	      {% block submenu %}
+	      <a class="ms-3 navbar-brand d-flex justify-content-start" href="#">Hi {{ user.first_name }} {{ user.last_name }}</a>
+	      {% endblock %}
+              <ul class="me-3 navbar-nav">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <span class="bi bi-person-fill"></span>
+                  </a>
+                  <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="navbarDarkDropdownMenuLink">
+                    <li><a class="dropdown-item" href="{% url 'logout' %}">Logout&nbsp;<span class="oi oi-account-logout"></span></a></li>
+                    <li><a class="dropdown-item" href="#" data-toggle="modal" data-target="#reset-token">Reset token</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" target="_blank" href="https://kooplex.github.io/#portfolioModal3" data-toggle="modal" data-target="#about-contacts">About/Contact us</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </nav>
         </div>
-      </div>
-    </nav>
-      {% block submenu %}{% endblock %}
+        {% endblock %}
+	{% block bodycontent %}{% endblock %}
+      {% endblock %}
+      </main>
+    </div>
     {% endblock %}
-    {% block body %}
-      <div class="body-content">
-        <div class="container">
-          <div class="navigation-menu">
-            <div>
-              {% include 'message.html' %}
-              {% block main_content_left %}{% endblock %}
-            </div>
-          </div>
-          <div class="main-content">
-            <div>
-             {% block main_content_right %}{% endblock %}
-            </div>
-          </div>
-        </div>
+    {% block footer %}
+    <footer>
+      <hr>
+      <div class="row">
+        <a class="dropdown-item" href="https://xwiki.vo.elte.hu/en/kooplex-manual/overview" target="_blank">Documentation</a>
       </div>
+    </footer>
     {% endblock %}
 
+
+    {% block scripts %}{% endblock %}
     <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" 
-      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
   </body>
 </html>
-
