--- a/kooplexhub/project/templates/project_join.html
+++ b/kooplexhub/project/templates/project_join.html
@@ -1,46 +1,13 @@
-{% extends "layout.html" %}
-
-
+{% extends "project_layout.html" %}
 
 {% load static %}
 {% load render_table from django_tables2 %}
 
 {% block chardinhelp %}
-<link type="text/css" href="{% static 'chardinjs/chardinjs.css' %}" rel="stylesheet">
-<script src="{% static 'chardinjs/chardinjs.js' %}" type="text/javascript"></script>
-<script>
-   (function() {
-     $(function() {
-       $('body').chardinJs({
-         'attribute': 'data-intro',
          url: "{% static 'chardinjs/joinproject.json' %}"
-       });
-   
-       // or trigger via an anchor tag
-       $('a[data-toggle="chardinjs"]').on('click', function (e) {
-         e.preventDefault();
-         $("div.envcard:first").find(".collapse").addClass('show');
-         return ($('body').data('chardinJs')).toggle();
-       });
-   
-         return $('body').on('chardinJs:stop', function () {
-         //$("div.envcard:first").find(".collapse").removeClass('show');
-
-       });
-
-     });
-   }).call(this);
-</script>
-
 {% endblock %}
 
-
-{% block submenu %}
-  {% include 'project_submenu.html' with title="Projects" submenu="join" %}
-{% endblock %}
-
-{% block main_content_right %}
-  
+{% block realcontent %}
 <div class="card shadow mt-3 p-3 mb-5 bg-light rounded" data-intro="#join_project"> 
 <form id="project-manage" class="form-horizontal" action="{% url 'project:join' %}" method="post">
   {% csrf_token %}
@@ -49,7 +16,7 @@
     {% if t_joinable.data|length > 0 %}
       {% render_table t_joinable %}
     {% else %}
-      <p>You do not have any projects to join.</p>
+      <p>There are no projects to join.</p>
     {% endif %}
     {% include 'apply_cancel.html' with apply='Join projects' %}
   </div>
@@ -57,14 +24,3 @@
 </div>
 {% endblock %}
 
-{% block main_content_left %}
-  {#% include 'project/hint_join.html' %#}
-{% endblock %}
-
-{% block navsearch %}
-<form class="d-flex" action="{% url 'project:join' %}" method="get">
-  {#% csrf_token %#}
-  <input class="form-control me-2" type="search" name="project_or_creator" placeholder="Search project/creator" value="{{ user.profile.search_project_join }}" aria-label="Search">
-  <button class="btn btn-outline-secondary" type="submit" name="button" value="search">Search</button>
-</form>
-{% endblock %}
