--- a/kooplexhub/project/templates/project_partial_list.html
+++ b/kooplexhub/project/templates/project_partial_list.html
@@ -1,51 +1,54 @@
-{% load buttons %}
 {% load project_buttons %}
+{% load container_buttons %}
 
-<div class="card bg-light border-info shadow mb-3 search" id="{{ project.name }}">
-  <div class="card-header" style="background-color:initial" onpointerenter="this.setAttribute('style', 'background-color: white')" onpointerleave="this.setAttribute('style', 'background-color: initial')">
-    <div class="row" style="color: black" onpointerenter="this.setAttribute('style', 'font-weight: bold')" onpointerleave="this.setAttribute('style', 'color: black')">
-     <div class="col-11" data-bs-toggle="collapse" data-bs-target="#collapse-{{ project.id }}" aria-expanded="false" aria-controls="collapse-{{ project.id }}" style="cursor: pointer; display: flex; flex-wrap: wrap; justify-content: space-between">
-      <div style="display:flex">
-        {% dropdown_start_open_stop bindings=projectcontainerbindings ancestor=project ancestor_type='project' next_page='project:list' %}
-        <div>
-          <span style="margin-left: 10px">{{ project.name }}</span> <i>(folder name: {{ project.subpath }})</i>
-        </div>
-      </div>
-      <div class="float-end">
-        {% scope project %}
+
+<div class="card bg-light border-secondary shadow mb-3" id="card-{{ project.id }}" style="cursor: pointer;" 
+     data-bs-toggle="collapse" data-bs-target="#collapse-{{ project.id }}" aria-expanded="false" aria-controls="collapse-{{ project.id }}">
+  <div class="card-header">
+    <div class="container-fluid">
+      <div class="d-flex flex-row justify-content-between">
+        <div class="d-flex flex-row justify-content-start">
+          <div>{% dropdown_start_open_stop bindings=projectcontainerbindings ancestor=project ancestor_type='project' next_page='project:list' %}</div>
+          <div class="ms-5" id="project-name-{{ project.id }}">{{ project.name }}</div>
+	</div>
+        <div class="d-flex flex-row justify-content-end">
+          <div>{% icon_collaborator project user %}</div>
+          <div class="ms-3">{% scope project %}</div>
+	</div>
       </div>
     </div>
-    </div>
-  </div> <!-- card header -->
-
-
+  </div><!-- card header -->
   <div class="collapse" id="collapse-{{ project.id }}">
     <div class="card card-body">
       {% if project.creator != user %}
         <p class="card-text"><strong>Creator:</strong> {{ project.creator.profile.name_and_username }}</p>
       {% endif %}
       <p class="card-text"><strong>Description:</strong> {{ project.description }}</p>
+      <p class="card-text"><strong>Collaborators:</strong> {% list_collaborator project user %}</p>
+      <p class="card-text"><strong>Folder:</strong> {{ project.subpath }}</p>
       <p class="card-text">
-       <div class="btn-group" role="group">
-        <p class="card-text"><strong>Info:</strong></p>
+      {# fixme hoe report button is rendered #}
         {% include 'reports_button.html' %}
-        {% button_collaborator project user %}
-       </div>
       </p>
     </div>
     <div class="card card-footer">
-      <div class="row">
-	<div class="col">
-	  {% button_project_conf project enabled=is_admin %}
-	  {% button_project_hide project %}
-      </div>
-      <div class="col">
-        <div class="float-end">
-	  {% button_project_delete project %}
+      <div class="container-fluid">
+        <div class="d-flex flex-row justify-content-between">
+          <div class="d-flex flex-row justify-content-start">
+	    <div>{% button_project_conf project enabled=is_admin %}</div>
+	    <div class="ms-2">{% button_project_hide project %}</div>
+          </div>
+          <div class="d-flex flex-row justify-content-end">
+	    <div>{% button_project_delete project %}</div>
+          </div>
         </div>
       </div>
     </div>
-   </div>
   </div>
 </div>
+
+{% comment %}
+JQuery
+ onpointerenter="this.setAttribute('style', 'background-color: white')" onpointerleave="this.setAttribute('style', 'background-color: initial')" 
+{% endcomment %}
 
