--- a/kooplexhub/project/templates/project_partial_list.html
+++ b/kooplexhub/project/templates/project_partial_list.html
@@ -2,14 +2,16 @@
 {% load container_buttons %}
 
 
-<div class="card bg-light border-secondary shadow mb-3" id="card-{{ project.id }}" style="cursor: pointer;" 
-     data-bs-toggle="collapse" data-bs-target="#collapse-{{ project.id }}" aria-expanded="false" aria-controls="collapse-{{ project.id }}">
+<div class="card bg-light border-secondary shadow mb-3" id="card-{{ project.id }}">
   <div class="card-header">
     <div class="container-fluid">
       <div class="d-flex flex-row justify-content-between">
         <div class="d-flex flex-row justify-content-start">
           <div>{% dropdown_start_open_stop bindings=projectcontainerbindings ancestor=project ancestor_type='project' next_page='project:list' %}</div>
-          <div class="ms-5" id="project-name-{{ project.id }}">{{ project.name }}</div>
+	  <div class="ms-5" id="project-name-{{ project.id }}" style="cursor: pointer;" 
+               data-bs-toggle="collapse" data-bs-target="#collapse-{{ project.id }}" aria-expanded="false" aria-controls="collapse-{{ project.id }}">
+            <span class="badge rounded-pill bg-secondary p-2 ps-3 pe-3">{{ project.name }}</span>
+	  </div>
 	</div>
         <div class="d-flex flex-row justify-content-end">
           <div>{% icon_collaborator project user %}</div>
