--- a/kooplexhub/container/templates/container_configure.html
+++ b/kooplexhub/container/templates/container_configure.html
@@ -1,13 +1,10 @@
-{% extends "layout.html" %}
+{% extends "container_layout.html" %}
 
 {% load render_table from django_tables2 %}
 
-{% block submenu %}
-  {% include 'container_submenu.html' with title="Configure service environment" %}
-{% endblock %}
-
-{% block main_content_right %}
+{% block realcontent %}
 <div class="card shadow p-3 mb-5 bg-light rounded">
+<h5>You are configuring {{ container.friendly_name }} environment</h5>
 <form id="container-manage" class="form-horizontal" action="{% url 'container:configure' container.id %}" method="post">
 {% csrf_token %}
   <ul class="nav nav-tabs" id="serviceConfigTabs" role="tablist">
@@ -25,6 +22,11 @@
 {% if app_education_installed %}
     <li class="nav-item" role="presentation">
       <a class="nav-link {% if active == "courses" %}active{% endif %}" id="tab-courses" data-bs-toggle="tab" href="#courses" role="tab" aria-controls="courses" aria-selected="{% if active == "courses" %}true{% else %}false{% endif %}">Courses</a>
+    </li>
+{% endif %}
+{% if app_volume_installed %}
+    <li class="nav-item" role="presentation">
+	    <a class="nav-link {% if active == "volumes" %}active{% endif %}" id="tab-volumes" data-bs-toggle="tab" href="#volumes" role="tab" aria-controls="volumes" aria-selected="{% if active == "volumes" %}true{% else %}false{% endif %}">Volume</a>
     </li>
 {% endif %}
 	    {% comment %}
@@ -77,6 +79,13 @@
     </div>
 {% endif %}
 
+{% if app_volume_installed %}
+    <div class="tab-pane fade {% if active == "volumes" %}show active{% endif %}" id="volumes" role="tabpanel" aria-labelledby="tab-volumes">
+      <input type="hidden" name="active_tab" value="volumes">
+      <h5 class="card-title">Select volumes to associate with the container environment</h5>
+      {% render_table t_volumes %}
+    </div>
+{% endif %}
 	    {% comment %}
     <div class="tab-pane fade {% if active == "volumes" %}show active{% endif %}" id="volumes" role="tabpanel" aria-labelledby="tab-volumes">
 	    ...
