--- a/kooplexhub/container/templates/container_list.html
+++ b/kooplexhub/container/templates/container_list.html
@@ -1,135 +1,44 @@
-{% extends "layout.html" %}
+{% extends "container_layout.html" %}
 
-    {% load static %}
+{% load static %}
 
-    {% block chardinhelp %}
-    <link type="text/css" href="{% static 'chardinjs/chardinjs.css' %}" rel="stylesheet">
-    <script src="{% static 'chardinjs/chardinjs.js' %}" type="text/javascript"></script>
-    <script>
-       (function() {
-         $(function() {
-           $('body').chardinJs({
-             'attribute': 'data-intro',
+{% block chardinhelp %}
              url: "{% static 'chardinjs/helptext_env.json' %}"
-           });
-       
-           // or trigger via an anchor tag
-           $('a[data-toggle="chardinjs"]').on('click', function (e) {
-             e.preventDefault();
-             $("div.envcard:first").find(".collapse").addClass('show');
-             return ($('body').data('chardinJs')).toggle();
-           });
-       
-             return $('body').on('chardinJs:stop', function () {
-             //$("div.envcard:first").find(".collapse").removeClass('show');
-
-           });
-
-         });
-       }).call(this);
-    </script>
-
-<script>
-  function myFunction() {
-      var input, filter, ul, li, a, i, txtValue;
-      input = document.getElementById("myInput");
-      filter = input.value.toUpperCase();
-      ul = document.getElementById("containerListPane");
-      li = ul.getElementsByTagName("div");
-      for (i = 0; i < li.length; i++) {
-  a = li[i]; 
-  atag = li[i].getAttribute("class");   
-  if (atag.indexOf("search") > -1) {
-    //console.log(a);
-    txtValue = a.id;
-                      if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                          li[i].style.display = "";
-                      } else {
-                          li[i].style.display = "none";
-                      }
-  }
-      }
-  }
-</script>
-
-    {% endblock %}
-{% block submenu %}
-  {% include 'container_submenu.html' with title="Environments" submenu="list" %}
 {% endblock %}
 
-{% block main_content_right %}
-
-
-
-
-<input class="form-control me-2 mb-3 mt-3" type="text" id="myInput" onkeyup="myFunction()" placeholder="Search environments" title="Type in a name" autofocus>
-  
-{% if user.profile.layout_container_list %}
-<div id="containerListPane" data-intro="#container_list" >
+{% block realcontent %}
+  <input class="form-control me-2 mb-3 mt-3" type="text" id="search_container" placeholder="Search environments" title="Type in a name" autofocus data-intro="#search_environment">
+  <div id="containerListPane" data-intro="#container_list" >
   {% for container in containers %}
      {% include 'container_partial_list.html' %}
   {% endfor %}
-</div>
-{% else %}
-<div id="containerListPane" class="row row-cols-1 row-cols-md-3 g-4" data-intro="#container_list">
-  {% for container in containers %}
-     {% include 'container_partial_card.html' %}
-  {% endfor %}
-</div>
-{% endif %}
-
-
-  <script>
-
-$( document ).ready(function() {
-        var hid_shw = $( "#shown_containers" )
-  var c_val = $.cookie("show_container")
-  if (c_val) {
-    c_val = c_val.replaceAll('\\054', ',')
-    console.log( c_val )
-    $.removeCookie("show_container", { 'path': '/' })
-          hid_shw.val( c_val )
-  } else {
-    console.log( "show container cookie entry missing" )
-          hid_shw.val( JSON.stringify([]) )
-  }
-});
-
-$(".btn").on("click", function () {
-  var shown = $( "#shown_containers" ).val()
-  console.log( "shown: " + shown )
-  $.cookie("show_container", shown, { 'path': '/' })
-  return true
-})
-
-function onlyUnique(value, index, self) {
-  return self.indexOf(value) === index;
-}
-
-$("#containerListPane div div div").on("click", function () {
-    var tgl = $( this ).attr("data-bs-toggle")
-    if (tgl === 'collapse') {
-      var collapsed = $( this ).hasClass("collapsed")
-      var hid_shw = $( "#shown_containers" )
-      var shw = JSON.parse( hid_shw.val() )
-      console.log( "before: " + shw )
-      var tgl_id = parseInt( $( this ).attr("data-bs-target").split('-')[1] )
-      if (collapsed) {
-    const index = shw.indexOf(tgl_id);
-          if (index > -1) {
-              shw.splice(index, 1);
-          }
-      } else {
-          shw.push( tgl_id )
-      }
-      shw = shw.filter(onlyUnique);
-      console.log( "after: " + shw )
-      hid_shw.val( JSON.stringify(shw) )
-    }
-})
-  </script>
+  </div>
 {% endblock %}
 
-{% block main_content_left %}
-  {#% include 'container/hint_list.html' %#}
+{% block scripts %}
+<script>
+$("#search_container").keyup(function() {
+  var pattern = $( this ).val().toUpperCase();
+  console.log( "search: " + pattern );
+  $("span[id^='container-name-'").each(function() {
+  console.log( this );
+    var containerid = $( this ).attr('id').split('-')[2];
+    var hide_it = true;
+    var card = $("#card-" + containerid);
+    if (pattern.length > 0) {
+      var name = $( this ).html().toUpperCase();
+      if ( name.indexOf(pattern) > -1 ) {
+        hide_it = false;
+      }
+    } else {
+      hide_it = false;
+    }
+    if (hide_it) {
+      $( card ).hide();
+    } else {
+      $( card ).show();
+    }
+  });
+});
+</script>
 {% endblock %}
