--- a/kooplexhub/container/templates/container_partial_list.html
+++ b/kooplexhub/container/templates/container_partial_list.html
@@ -1,23 +1,25 @@
-{% load buttons %}
+{% load container_buttons %}
 {% load check_show %}
 
 
-<div class="card bg-light border-secondary shadow mb-3 envcard search" data-intro="#container_buttons" id="{{ container.friendly_name }}">
-  <div class="card-header" style="background-color:initial" onpointerenter="this.setAttribute('style', 'background-color: white')" onpointerleave="this.setAttribute('style', 'background-color: initial')">
-    <div class="row"  style="color: black" onpointerenter="this.setAttribute('style', 'font-weight: bold')" onpointerleave="this.setAttribute('style', 'color: black')">
-      <div class="col-1">
-	{% button_start_open_restart container next_page='container:list' %}
-      </div>
-      <div class="col-11" data-bs-toggle="collapse" data-bs-target="#collapse-{{ container.id }}" aria-expanded="false" aria-controls="collapse-{{ container.id }}" style="cursor: pointer;">
-
-	      {{ container.friendly_name }}
-        <div class="float-end">
-	  {% container_image container %}
-        </div>
+<div class="card bg-light border-secondary shadow mb-3" id="card-{{ container.id }}">
+  <div class="card-header">
+    <div class="container-fluid">
+      <div class="d-flex flex-row justify-content-between">
+        <div class="d-flex flex-row justify-content-start">
+          <div>{% button_start_open_restart  container next_page='container:list' %}</div>
+	  <div class="ms-5" style="cursor: pointer;" 
+               data-bs-toggle="collapse" data-bs-target="#collapse-{{ container.id }}" aria-expanded="false" aria-controls="collapse-{{ container.id }}">
+            <span id="container-name-{{ container.id }}" class="badge rounded-pill bg-secondary p-2 ps-3 pe-3">{{ container.friendly_name }}</span>
+	  </div>
+	</div>
+        <div class="d-flex flex-row justify-content-end">
+          <div>{% container_image container %}</div>
+	</div>
       </div>
     </div>
-  </div> <!-- card header -->
-  <div class="collapse {{ request|show:container }}" id="collapse-{{ container.id }}">
+  </div><!-- card header -->
+  <div class="collapse" id="collapse-{{ container.id }}">
     <div class="card card-body">
       <p class="card-text"><strong>Information:</strong>
 	  {% projects projects=container.projects %}
@@ -54,17 +56,23 @@
       </p>
       {% container_restart_reason container %}
       {% container_last_message container %}
-      <div class="row">
-      <div class="float-start">
-        {% button_start_open container next_page="container:list" %}
-        {% button_restart container next_page="container:list" %}
-        {% button_stop container next_page="container:list" %}
-        {% button_refreshlog container next_page="container:list" %}
-        {% if not container.report %}
-	  {% button_configure container %}
-          {% button_delete_container container next_page="container:list" %}
-        {% endif %}
-      </div>
+    </div>
+    <div class="card card-footer">
+      <div class="container-fluid">
+        <div class="d-flex flex-row justify-content-between">
+          <div class="d-flex flex-row justify-content-start">
+	    <div>{% button_start_open container next_page="container:list" %}</div>
+	    <div class="ms-2">{% button_restart container next_page="container:list" %}</div>
+	    <div class="ms-2">{% button_stop container next_page="container:list" %}</div>
+            <div class="ms-2">{% button_refreshlog container next_page="container:list" %}</div>
+          </div>
+          <div class="d-flex flex-row justify-content-end">
+          {% if not container.report %}
+	    <div>{% button_configure container %}</div>
+            <div class="ms-2">{% button_delete_container container next_page="container:list" %}</div>
+          {% endif %}
+          </div>
+        </div>
       </div>
     </div>
   </div>
