--- a/kooplexhub/hub/templates/mainmenu.html
+++ b/kooplexhub/hub/templates/mainmenu.html
@@ -1,4 +1,5 @@
-<nav class="p-2 pt-3 navbar navbar-dark bg-dark d-flex align-items-start">
+
+<nav class="p-2 pt-3 navbar navbar-dark bg-dark d-flex align-items-start" style="min-height: 100vh;">
   <ul class="navbar-nav flex-column flex-md-column">
     <li class="nav-item">
       <a class="nav-item" href="/hub/">
@@ -8,7 +9,7 @@
       </a>
     </li>
     <li class="mt-3 nav-item">
-      <a class="nav-link {% if menu_container %}active{% endif %}" href="{% url 'container:list' %}"><i class="bi bi-boxes"></i><span class="d-none d-sm-inline">&nbsp;Environment</span></a>
+      <a class="nav-link {% if menu_container %}active{% endif %}" href="{% url 'container:list' %}"><i class="bi bi-boxes"></i><span class="d-none d-sm-inline">&nbsp;Environments</span></a>
     </li>
     {% if app_project_installed %}
     <li class="nav-item">
@@ -27,7 +28,7 @@
     {% endif %}
     {% if app_volume_installed %}
     <li class="nav-item">
-      <a class="nav-link {% if menu_volume %}active{% endif %}" href="#"><i class="bi bi-folder2-open"></i><span class="d-none d-sm-inline">&nbsp;Volume</span></a>
+      <a class="nav-link {% if menu_volume %}active{% endif %}" href="#"><i class="bi bi-folder2-open"></i><span class="d-none d-sm-inline">&nbsp;Volumes</span></a>
     </li>
     {% endif %}
   </ul>
