--- a/kooplexhub/project/templates/project_layout.html
+++ b/kooplexhub/project/templates/project_layout.html
@@ -3,6 +3,7 @@
 {% load static %}
 {% load project_buttons %}
 
+
 {% block submenu %}
 <ul class="navbar-nav flex-row flex-md-row">
   <li class="ms-3 nav-item">
@@ -21,7 +22,14 @@
 {% endblock %}
 
 {% block bodycontent %}
-<div class="container">
+{# fixme: style margin-top why not mt-3 ?????? #}
+<div class="container" style="margin-top: 10px">
+  <div class="card shadow p-3 mb-2 mt-3 bg-light rounded" id="box">
+    <h5 class="card-title">Messages:</h5>
+    {% block message %}
+    {% endblock %}
+    </div>  
+
 {% block realcontent %}
   <div class="card shadow p-3 mb-2 mt-3 bg-light rounded"> 
     <h6 class="card-title">Nothing interesting</h6>
@@ -29,6 +37,8 @@
   </div>
 {% endblock %}
 </div>
+
+{% comment %}
 
 {% block messages %}
 {# fixme layout of notes #}
@@ -46,7 +56,7 @@
 </div>
 </div>
 {% endif %}
-{% endblock %}
+{% endcomment %}
 
 {% endblock %}
 
