--- a/kooplexhub/project/templates/project_join.html
+++ b/kooplexhub/project/templates/project_join.html
@@ -18,7 +18,7 @@
     {% else %}
       <p>There are no projects to join.</p>
     {% endif %}
-    {% include 'apply_cancel.html' with apply='Join projects' %}
+    {% include 'apply_cancel.html' with hide_cancel=True apply='Join projects' %}
   </div>
 </form>
 </div>
