--- a/kooplexhub/container/templates/container_layout.html
+++ b/kooplexhub/container/templates/container_layout.html
@@ -19,13 +19,7 @@
 {% endblock %}
 
 {% block bodycontent %}
-<div class="container" style="margin-top: 10px">
-  <div class="card shadow p-3 mb-2 mt-3 bg-light rounded" id="box">
-    <h5 class="card-title">Messages:</h5>
-    {% block message %}
-    {% endblock %}
-    </div>  
-
+<div class="container mt-4">
 {% block realcontent %}
   <div class="card shadow p-3 mb-2 mt-3 bg-light rounded"> 
     <h6 class="card-title">Nothing interesting</h6>
@@ -33,7 +27,5 @@
   </div>
 {% endblock %}
 </div>
-
-
 {% endblock %}
 
