--- a/kooplexhub/hub/templates/layout.html
+++ b/kooplexhub/hub/templates/layout.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!doctype html>
-<html lang="en">
+<html lang="en" style="height:100%">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,14 +21,50 @@
   padding-left: initial;
   padding-right: initial;
 }
+@media (max-width: 1199.98px) { 
+  .helloname{
+    font-size: 15px;
+  }
+}
     </style>
+
     {% block head_content %}{% endblock %}
     <!-- JQuery motor -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
-  </head>
-  <body>
+
+<!--  This block is for the chardinjs help functionality-->
+    <link type="text/css" href="{% static 'chardinjs/chardinjs.css' %}" rel="stylesheet">
+    <script src="{% static 'chardinjs/chardinjs.js' %}" type="text/javascript"></script>
+    <script>
+       (function() {
+         $(function() {
+           $('body').chardinJs({
+             'attribute': 'data-intro',
+             {% block chardinhelp %}
+             url: "{% static 'chardinjs/helptext_main.json' %}"
+             {% endblock %}
+           });
+
+           // or trigger via an anchor tag
+           $('a[data-toggle="chardinjs"]').on('click', function (e) {
+             e.preventDefault();
+             return ($('body').data('chardinJs')).toggle();
+           });
+
+             return $('body').on('chardinJs:stop', function () {
+
+           });
+
+         });
+       }).call(this);
+    </script>
+ <!-- ending block for shardinjs -->
+</head>
+
+
+  <body style="height: 100%;">
     <noscript>You need to enable JavaScript to browse kooplex.</noscript>
     {% block menu_and_content %}
     <div class="container-fluid d-flex flex-row flex-md-row">
@@ -40,17 +76,22 @@
           <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex">
             <div class="container-fluid d-flex flex-column flex-md-row">
 	      {% block submenu %}
-	      <a class="ms-3 navbar-brand d-flex justify-content-start" href="#">Hi {{ user.first_name }} {{ user.last_name }}</a>
+	      <a class="ms-3 navbar-brand d-flex justify-content-start helloname" href="#">Hi, {{ user.first_name }} {{ user.last_name }}. Welcome to Kooplex!</a>
 	      {% endblock %}
-              <ul class="me-3 navbar-nav">
-                <li class="nav-item dropdown">
+              <ul class="me-3 navbar-nav d-flex flex-row">
+                <li class="nav-item"><a href="#" class="nav-link" data-toggle="chardinjs"><span class="oi oi-question-mark"/></a></li>
+		<li class="nav-item ms-3 ms-md-1"><a href="#" class="nav-link" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMessages" aria-controls="offcanvasMessages"><span class="bi bi-chat-left-dots"/></a></li>
+                <li class="nav-item dropdown ms-3 ms-md-1">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <span class="bi bi-person-fill"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end" aria-labelledby="navbarDarkDropdownMenuLink">
+                    <li><p class="dropdown-item">{{ user.first_name }} {{ user.last_name }}</p></li>
+                    <hr/>
                     <li><a class="dropdown-item" href="{% url 'logout' %}">Logout&nbsp;<span class="oi oi-account-logout"></span></a></li>
                     <li><a class="dropdown-item" href="#" data-toggle="modal" data-target="#reset-token">Reset token</a></li>
                     <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="https://xwiki.vo.elte.hu/en/kooplex-manual/overview" target="_blank">Documentation</a></li>
                     <li><a class="dropdown-item" target="_blank" href="https://kooplex.github.io/#portfolioModal3" data-toggle="modal" data-target="#about-contacts">About/Contact us</a></li>
                   </ul>
                 </li>
@@ -58,19 +99,28 @@
             </div>
           </nav>
         </div>
+
+        <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasMessages" aria-labelledby="offcanvasMessagesLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasMessagesLabel">Messages</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+	    {% block messages %}
+              {% include "alert.html" %}
+	    {% endblock %}
+          </div>
+        </div>
+
         {% endblock %}
 	{% block bodycontent %}{% endblock %}
       {% endblock %}
       </main>
     </div>
     {% endblock %}
+  
     {% block footer %}
-    <footer>
-      <hr>
-      <div class="row">
-        <a class="dropdown-item" href="https://xwiki.vo.elte.hu/en/kooplex-manual/overview" target="_blank">Documentation</a>
-      </div>
-    </footer>
+
     {% endblock %}
 
 
