--- a/kooplexhub/project/templates/project_layout.html
+++ b/kooplexhub/project/templates/project_layout.html
@@ -22,14 +22,7 @@
 {% endblock %}
 
 {% block bodycontent %}
-{# fixme: style margin-top why not mt-3 ?????? #}
-<div class="container" style="margin-top: 10px">
-  <div class="card shadow p-3 mb-2 mt-3 bg-light rounded" id="box">
-    <h5 class="card-title">Messages:</h5>
-    {% block message %}
-    {% endblock %}
-    </div>  
-
+<div class="container mt-4">
 {% block realcontent %}
   <div class="card shadow p-3 mb-2 mt-3 bg-light rounded"> 
     <h6 class="card-title">Nothing interesting</h6>
@@ -37,26 +30,5 @@
   </div>
 {% endblock %}
 </div>
-
-{% comment %}
-
-{% block messages %}
-{# fixme layout of notes #}
-<div class="container">
-{% if notes %}
-<div class="card shadow p-3 mb-5 bg-light rounded"> 
-   <div class="card-body">
-      <h5 class="card-title">Note{% if notes|length > 1 %}s{% endif %}</h5>
-      <div class="alert alert-info show" role="alert">
-{% for note in notes %}
-        <p>{{ note.message }}<br>{{ note.created_at }}</p>
-{% endfor %}
-      </div>
-   </div>
-</div>
-</div>
-{% endif %}
-{% endcomment %}
-
 {% endblock %}
 
