--- a/kooplexhub/project/templates/project_list.html
+++ b/kooplexhub/project/templates/project_list.html
@@ -3,8 +3,7 @@
 {% load static %}
 
 {% block chardinhelp %}
-{# fixme filename #}
-         url: "{% static 'chardinjs/menueducation_env.json' %}"
+         url: "{% static 'chardinjs/listproject.json' %}"
 {% endblock %}
 
 
