--- a/kooplexhub/hub/templates/mainmenu.html
+++ b/kooplexhub/hub/templates/mainmenu.html
@@ -4,8 +4,8 @@
     <li class="nav-item">
       <a class="nav-item" href="/hub/">
   	{# fixme: colorful logo wo backround #}
-        <img src="/static/logo-transparent.png" width="120" height="30" alt="Kooplex Hub" class="d-none d-sm-block">
-        <img src="/static/kooplexicon.png" width="30" height="auto" alt="Kooplex Hub" class="d-block d-sm-none">
+        <img src="/static/logo-halfcolored.png" width="120" height="30" alt="Kooplex Hub" class="d-none d-sm-block">
+        <img src="/static/logo-onlycogwheels.png" width="30" height="auto" alt="Kooplex Hub" class="d-block d-sm-none">
       </a>
     </li>
     <li class="mt-3 nav-item">
