--- a/kooplexhub/hub/templates/mainmenu.html
+++ b/kooplexhub/hub/templates/mainmenu.html
@@ -1,35 +1,35 @@
+{% load static %}
 
-<nav class="p-2 pt-3 navbar navbar-dark bg-dark d-flex align-items-start" style="min-height: 100vh;">
+
+<nav class="p-4 pt-3 navbar navbar-dark bg-dark d-flex align-items-start" style="min-height: 100vh;">
   <ul class="navbar-nav flex-column flex-md-column">
     <li class="nav-item">
       <a class="nav-item" href="/hub/">
   	{# fixme: colorful logo wo backround #}
-        <img src="/static/logo-halfcolored.png" width="120" height="30" alt="Kooplex Hub" class="d-none d-sm-block">
-        <img src="/static/logo-onlycogwheels.png" width="30" height="auto" alt="Kooplex Hub" class="d-block d-sm-none">
+        <img src="/static/logo-halfcolored.png" width="120" height="30" alt="Kooplex Hub" class="d-none d-sm-block" data-toggle="tooltip" title="Access home page through Kooplex logo" data-placement="bottom">
+        <img src="/static/logo-onlycogwheels.png" width="30" height="auto" alt="Kooplex Hub" class="d-block d-sm-none" data-toggle="tooltip" title="Access home page through Kooplex logo" data-placement="bottom">
       </a>
     </li>
-    <li class="mt-3 nav-item">
+    <li class="mt-4 nav-item" data-toggle="tooltip" title="Environment" data-placement="bottom">
       <a class="nav-link {% if menu_container %}active{% endif %}" href="{% url 'container:list' %}"><i class="bi bi-boxes"></i><span class="d-none d-sm-inline">&nbsp;Environments</span></a>
     </li>
     {% if app_project_installed %}
-    <li class="nav-item">
+    <li class="nav-item mt-2"  data-toggle="tooltip" title="Projects" data-placement="bottom">
       <a class="nav-link {% if menu_project %}active{% endif %}" href="{% url 'project:list' %}"><i class="bi bi-person-workspace"></i><span class="d-none d-sm-inline">&nbsp;Projects</span></a>
     </li>
     {% endif %}
     {% if app_report_installed %}
-    <li class="nav-item">
+    <li class="nav-item mt-2"  data-toggle="tooltip" title="Reports" data-placement="bottom">
       <a class="nav-link {% if menu_report %}active{% endif %}" href="{% url 'report:list' %}"><i class="bi bi-projector"></i><span class="d-none d-sm-inline">&nbsp;Reports</span></a>
     </li>
     {% endif %}
     {% if app_education_installed %}
-    <li class="nav-item">
+    <li class="nav-item mt-2" data-toggle="tooltip" title="Education" data-placement="bottom">
       <a class="nav-link {% if menu_teaching %}active{% endif %}" href="{% url 'education:student' %}"><i class="bi bi-textarea-t"></i><span class="d-none d-sm-inline">&nbsp;Education</span></a>
     </li>
     {% endif %}
-    {% if app_volume_installed %}
-    <li class="nav-item">
-      <a class="nav-link {% if menu_volume %}active{% endif %}" href="#"><i class="bi bi-folder2-open"></i><span class="d-none d-sm-inline">&nbsp;Volumes</span></a>
+    <li class="nav-item mt-2"  data-toggle="tooltip" title="List and manage attachments and volumes" data-placement="bottom">
+      <a class="nav-link {% if menu_storage %}active{% endif %}" href="{% url 'container:list_attachments' %}"><i class="bi bi-folder2-open"></i><span class="d-none d-sm-inline">&nbsp;Storage</span></a>
     </li>
-    {% endif %}
   </ul>
 </nav>
